--- a/ConfigData/application.yml
+++ b/ConfigData/application.yml
@@ -1,1 +1,7 @@
-
+eureka:
+  instance:
+    statusPageUrlPath: ${management.endpoints.web.base-path}/info
+    healthCheckUrlPath: ${management.endpoints.web.base-path}/health
+  client:
+    serviceUrl:
+      defaultZone: http://eureka-primary:8050/eureka/,http://eureka-secondary:8051/eureka/
